@@ -23,7 +23,6 @@ Post 1.0 Stuff:
 
 1.1.0:
 ----
-        o server stuff yes/no
         o sorting/sorting ord - removed ord - need to check current sort
           order
         o secure tracing drill
